--- a/package.json
+++ b/package.json
@@ -3,18 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-map-react": "^1.1.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-places-autocomplete": "^7.2.1",
+    "react-redux": "^6.0.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "3.0.1",
+    "react-semantic-redux-form": "^1.2.6",
+    "react-toastify": "^4.5.2",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
+    "redux-create-reducer": "^1.2.0",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.1.0",
+    "redux-thunk": "^2.3.0",
+    "revalidate": "^1.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "eslint": "eslint --fix . --ext .jsx,.js src"
   },
   "browserslist": {
     "production": [
@@ -27,5 +44,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-react": "^7.12.4"
   }
 }
