login/register connected to server..

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -7,6 +7,8 @@
     "no-console": "off",
     "no-shadow": "off",
     "no-use-before-define": "off",
-    "no-undef": "off"
+    "no-undef": "off",
+    "react/forbid-prop-types": "off",
+    "no-underscore-dangle": "off"
   }
 }
