--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.6",
+    "react-load-script": "0.0.6",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
