--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "dateformat": "^3.0.3",
     "google-map-react": "^1.1.2",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
+    "pusher-js": "^4.4.0",
     "react": "^16.8.6",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.6",
