--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1"
   },
+  "engines": {
+    "node": "10.15.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
