--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dateformat": "^3.0.3",
+    "eslint-plugin-flowtype": "^3.9.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "google-map-react": "^1.1.2",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
@@ -58,7 +60,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-react": "^7.13.0"
   }
 }
